feat: add EditText for filtering list

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">City Directory</string>
     <string name="title_city_detail">City Detail</string>
     <string name="error_loading_cities">Error while loading cities data</string>
+    <string name="search">Search</string>
 </resources>
