--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">City Directory</string>
     <string name="title_city_detail">City Detail</string>
+    <string name="google_maps_key">AIzaSyC8JkT20wk4NvpmYXZrCdtTekib3ZHre_8</string>
     <string name="error_loading_cities">Error while loading cities data</string>
     <string name="search">Search</string>
 </resources>
